<resources>
    <string name="app_name">GCW Campus</string>
    <string name="image_description">This is image</string>
    <string name="button_description">This is clickable</string>
    <string name="text_view_description">This is a text view</string>
    <string name="button_get_started">Get Started</string>
    <string name="get_started_education">Education</string>
    <string name="get_started_details">Education is the most powerful weapon you can use to change the world.</string>
    <string name="select_role">Select Role :</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="country_code">+91</string>
    <string name="send_otp">Send OTP</string>
    <string name="sign_up_intro">Get started with GCW Campus</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sent_otp_on_number">We have sent OTP on your number</string>
    <string name="verify">Verify</string>
    <string name="create_student_profile">Create Student Profile</string>
    <string name="create_faculty_profile">Create Faculty Profile</string>
    <string name="create_admin_profile">Create Admin Profile</string>
    <string name="enter_address_hint">Enter Your Address</string>
    <string name="enter_dob_hint">Enter Your DOB</string>
    <string name="enter_dept_hint">Enter Your Department</string>
    <string name="enter_course_hint">Enter Your Course</string>
    <string name="enter_semester_hint">Enter Your Semester</string>
    <string name="enter_email_hint">Enter Your Email</string>
    <string name="enter_registration_number_hint">Enter Reg No.(e.g, CUS-***)</string>
    <string name="enter_gender">Select Your Gender :</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="enter_password_hint">Enter New Password</string>
    <string name="enter__confirm_password_hint">Confirm Your Password</string>
    <string name="submit_btn_txt">Submit</string>
    <string name="enter_name_hint">Enter Your Full Name</string>
    <string name="clg_name">GOVT. COLLEGE FOR WOMEN</string>
    <string name="clg_address">M.A ROAD SRINAGAR</string>
    <string name="clg_grade">NAAC Accredited Grade "B+" ESTD. 1950</string>
    <string name="clg_university">Constituent College of Cluster University, Srinagar.</string>
    <string name="principal_name">Principal \n Prof. Ruhi Jan Kanth</string>
    <string name="principal_message">Principal\'s Message</string>
    <string name="principal_message_description">At the outset, I along with my faculty welcome you to this glorious and prestigious institute of higher learning. You come from various socio-cultural backgrounds each one with her or his unique dream, and aspirations and it is our responsibility to enable opportunities to realize these aspirations into the future of tomorrow. I assure you that we will not leave any stone unturned to groom you as a better citizen in a friendly environment.</string>
    <string name="reflection_heading">Reflections</string>
    <string name="user_not_found">User not Found</string>
    <string name="nep_2020"><u> Two-Day National Conference on NEP-2020 \n Dated: 13 January 2024 </u></string>
    <string name="film_day"><u> 2-day Film Fest organised by Department of Journalism \n Dated: 17 December 2023 </u></string>
    <string name="conference"><u>Two-day International Conference on ‘Advances in Computer Sciences and Technology</u></string>
    <string name="gallery">Gallery</string>
    <string name="clg_info">M.A Road Srinagar, J and K 190001\nprincipal@gcwmaroad.edu.in\n0194–2479432</string>
    <string name="menu_timetable">View Time Table</string>
    <string name="faculty_menu_sub_sem">View Subjects and Semesters</string>
    <string name="faculty_menu_students">View Students</string>
    <string name="menu_logout">Logout</string>
    <string name="student_menu_sub">View Subjects</string>
    <string name="student_menu_faculty">View Faculty</string>
    <string name="enter_roll_no_hint">Enter Your Roll No.</string>
    <string name="add_timetable">Add Timetable</string>
    <string name="add_faculty">Add Faculty To Semester</string>
    <string name="send_notification">Send Notification</string>
    <string name="username">Username</string>
    <string name="reg_ph_no_hint">Registered Mobile No.</string>
    <string name="password">Password</string>
    <string name="password_hint">******</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="reset_password_email">Password will be sent to registered email with phone number</string>
    <string name="send_password">Send Password</string>
    <string-array name="user_roles">
        <item>--Role--</item>
        <item>Admin</item>
        <item>Faculty</item>
        <item>Student</item>
    </string-array>
    <string-array name="semesters">
        <item>--Select--</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="days">
        <item>--Select--</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="departments">
        <item>--Select Department--</item>
        <item>ARABIC</item>
        <item>BIO CHEMISTRY</item>
        <item>BIO TECHNOLOGY</item>
        <item>BOTANY</item>
        <item>CHEMISTRY</item>
        <item>CLINICAL BIO CHEMISTRY</item>
        <item>COMPUTER APPLICATION</item>
        <item>ECONOMICS</item>
        <item>EDUCATION</item>
        <item>ELECTRONICS</item>
        <item>ENGLISH</item>
        <item>ENVIRONMENTAL SCIENCE</item>
        <item>FOOD SCIENCE AND TECHNOLOGY</item>
        <item>FUNCTIONAL ENGLISH</item>
        <item>GEOGRAPHY</item>
        <item>HISTORY</item>
        <item>HOME SCIENCE</item>
        <item>INDUSTRIAL CHEMISTRY</item>
        <item>INFORMATION TECHNOLOGY</item>
        <item>ISLAMIC STUDIES</item>
        <item>JOURNALISM AND MASS COMMUNICATION</item>
        <item>KASHMIRI</item>
        <item>MATHEMATICS</item>
        <item>MUSIC</item>
        <item>PERSIAN</item>
        <item>PHILOSOPHY</item>
        <item>PHYSICS</item>
        <item>POLITICAL SCIENCE</item>
        <item>PSYCHOLOGY</item>
        <item>SOCIAL WORK</item>
        <item>SOCIOLOGY</item>
        <item>STATISTICS</item>
        <item>URDU</item>
        <item>WATER MANAGEMENT</item>
        <item>ZOOLOGY</item>
    </string-array>
    <string name="timetable">Timetable</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="hyphen">-</string>
    <string name="semester">Semester:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="subject">Subject</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="department">Department</string>
    <string name="period">Period</string>
    <string name="faculty">Faculty</string>
    <string name="select_semester">Select Semester :</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="select_period_start_time">Select Period Start Time</string>
    <string name="select_period_end_time">Select Period End Time</string>
    <string name="enter_period_no">Enter Period No.</string>
    <string name="enter_subject_to_teach">Enter Subject To Teach</string>
    <string name="add_faculty_to_teach">Add Faculty To Teach</string>
    <string name="select_department">Select Department</string>
    <string name="select_day">Select Day</string>
    <string name="phone_number">Phone Number:</string>
    <string name="select_course">Select Course :</string>
    <string name="address">Address:</string>
    <string name="d_o_b">D.O.B:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="roll_no">Roll No:</string>
    <string name="reg_no">Reg No:</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="period_">Period:</string>
</resources>