<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StudentCreateProfileActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description"
        android:scaleType="fitXY"
        android:src="@drawable/create_profile_vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_regular"
        android:text="@string/create_admin_profile"
        android:textColor="@color/white_text"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/edt_txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/name_card"
                android:drawablePadding="20dp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_name_hint"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/edt_txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="none"
                android:inputType="text"
                android:drawableStart="@drawable/house"
                android:drawablePadding="20dp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_address_hint"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/edt_txt_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="none"
                android:inputType="none"
                android:clickable="false"
                android:focusable="false"
                android:drawableStart="@drawable/calendar"
                android:drawablePadding="20dp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_dob_hint"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/edt_txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/email"
                android:drawablePadding="20dp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_email_hint"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_web_regular"
                android:text="@string/enter_gender"
                android:textSize="20sp"/>

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="316dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/rb_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_gender"
                    android:fontFamily="@font/titillium_web_regular"
                    android:textSize="16sp"
                    android:layout_marginEnd="50dp"/>

                <RadioButton
                    android:id="@+id/rb_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_gender"
                    android:fontFamily="@font/titillium_web_regular"
                    android:textSize="16sp"/>

            </RadioGroup>

            <EditText
                android:id="@+id/edt_txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password"
                android:drawablePadding="20dp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_password_hint"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/edt_txt_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password"
                android:drawablePadding="20dp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter__confirm_password_hint"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/submit_btn_txt"
                android:fontFamily="@font/titillium_web_regular"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>