<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:id="@+id/upper_vector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_description"
        android:src="@drawable/upper_vector_design"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/bottom_vector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image_description"
        android:src="@drawable/bottom_vector_design"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_regular"
        android:layout_marginStart="40dp"
        android:text="@string/sign_in"
        android:textColor="@color/white_text"
        android:textSize="32sp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_in_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/user_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/titillium_web_bold"
            android:text="@string/username"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_txt_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:autofillHints="phone"
            android:background="@drawable/sign_in_edit_text"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/reg_ph_no_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <TextView
            android:id="@+id/password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_txt_phone_number"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/titillium_web_bold"
            android:text="@string/password"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_txt"
            android:autofillHints="password"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/sign_in_edit_text"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_password"
            android:layout_alignEnd="@+id/edit_text_password"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white_text"
            android:textSize="13sp" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_password"
            android:layout_alignStart="@+id/edit_text_password"
            android:layout_alignEnd="@+id/edit_text_password"
            android:layout_marginTop="48dp"
            android:background="@drawable/button"
            android:fontFamily="@font/titillium_web_regular"
            android:text="@string/sign_in"
            android:textSize="24sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>